config/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cdpt-deploys-dashboard-service
  labels:
    app: cdpt-deploys-dashboard-service
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: cdpt-deploys-dashboard
